--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Dojo Toolchain</title>
   </head>
   <body>
+    <script type="module" src="dist/index.js" async></script>
     <h1>
         Bienvenue au super Dojo Toolchain !
     </h1>
