--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Dojo Toolchain</title>
   </head>
   <body>
+    <script src="index.js" async></script>
     <h1>
         Bienvenue au super Dojo Toolchain !
     </h1>
