ajout de webpack

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Dojo Toolchain</title>
   </head>
   <body>
-    <script src="index.js" async></script>
+    <script src="dist/index.js" async></script>
+
     <h1>
         Bienvenue au super Dojo Toolchain !
     </h1>
