add node modules in gitignore

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dojo Toolchain</title>
   </head>
   <body>
-    <script src="dist/index.js" async></script>
+    <script src="index.js" async></script>
 
     <h1>
         Bienvenue au super Dojo Toolchain !
