--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dojo Toolchain</title>
+    <script type="module" src="index.js" async></script>
   </head>
   <body>
-    <script src="index.js" async></script>
-
     <h1>
         Bienvenue au super Dojo Toolchain !
     </h1>
