--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dojo Toolchain</title>
-    <script type="module" src="index.js" async></script>
   </head>
   <body>
     <h1>
         Bienvenue au super Dojo Toolchain !
     </h1>
     <button id="button-id">Clique-moi</button>
+    <script type="module" src="app/js/index.js" async></script>
   </body>
 </html>
