save solutions of first page seance 2

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,6 @@
         Bienvenue au super Dojo Toolchain !
     </h1>
     <button id="button-id">Clique-moi</button>
-    <script type="module" src="app/js/index.js" async></script>
+    <script type="module" src="build/index.js" async></script>
   </body>
 </html>
