--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dojo Toolchain</title>
-    <script type="module" src="index.js" async></script>
+    <script type="module" src="app/dist/index.js" async></script>
   </head>
   <body>
     <h1>
